--- a/css/style.css
+++ b/css/style.css
@@ -379,7 +379,44 @@ header .nav ul {
   justify-self: center;
   grid-column: 1/3;
 }
-
+/* PORTFOLIO SECTION */
+.all-coded-design {
+  height: 60px;
+  width: 100%;
+  background-color: #1d1d1d;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.all-coded-design .all-coded-design-content {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.all-coded-design h4 {
+  font-weight: 400;
+  border: none;
+  padding-bottom: 8px;
+  width: 15vw;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.all-coded-design .active-color {
+  color: #ffffff;
+}
+.all-coded-design .active-border {
+  border-bottom: 0.12rem solid #ffffff;
+}
+.all-coded-design a {
+  text-decoration: none;
+  color: #c4c4c4;
+  letter-spacing: 0.15rem;
+  font-size: 0.7rem;
+}
+.all-coded-design-content {
+  border-bottom: 0.15rem solid #909090;
+}
 .jobs-done {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
