--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@ html {
 }
 
 .gray-bg {
-  background-image: radial-gradient(circle, #ffffff 35%, #c4c4c4);
+  background-image: radial-gradient(circle, #ffffff 50%, #c4c4c4);
 }
 h3 {
   display: inline-block;
@@ -42,6 +42,17 @@ header {
   background-color: #c4c4c4;
   z-index: 0;
 }
+#switch {
+  display: none;
+  position: absolute;
+  top: 15px;
+}
+.close-menu {
+  display: none;
+}
+.open-menu {
+  display: none;
+}
 .container {
   width: 100%;
   margin: 0 auto;
@@ -53,7 +64,6 @@ header {
   overflow: hidden;
 }
 /* NAVIGATION */
-
 header .nav {
   width: 100%;
   height: 60px;
@@ -76,10 +86,16 @@ header .nav ul {
 .nav .logo {
   width: 30px;
 }
-
+.logo-white {
+  display: none;
+}
 .nav .logo-white img {
   position: relative;
   width: 30px;
+  transition: all ease-in-out 0.3s;
+}
+.logo-white img:hover {
+  opacity: 0.7;
 }
 /*=====================*/
 .nav li {
@@ -111,59 +127,6 @@ header .nav ul {
   cursor: pointer;
 }
 
-/* HAMBURGER ICON SWITCH */
-#switch {
-  display: none;
-  position: absolute;
-  top: 15px;
-}
-.open-menu {
-  display: none;
-  position: relative;
-  margin-top: -10px;
-  height: 30px;
-  width: 30px;
-  border: 0.15rem solid #ffffff;
-}
-.close-menu {
-  display: none;
-  position: relative;
-  margin-top: -10px;
-  height: 30px;
-  width: 30px;
-  border: 0.15rem solid #ffffff;
-}
-.open-menu img {
-  position: relative;
-  top: 20%;
-  left: 20%;
-  width: 17px;
-  cursor: pointer;
-}
-.close-menu img {
-  position: relative;
-  top: 20%;
-  left: 20%;
-  width: 17px;
-  cursor: pointer;
-}
-.logo-white {
-  display: none;
-}
-#close-menu-main {
-  height: 600vh;
-  left: 0;
-  top: 10vh;
-  width: 100%;
-  background-color: #000000;
-  z-index: 6;
-  position: absolute;
-  display: none;
-  opacity: 0.5;
-}
-.switch {
-  display: block;
-}
 /* PROFILE INFORMATION */
 .section-info {
   width: 100%;
@@ -234,7 +197,6 @@ header .nav ul {
   box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.5);
   cursor: pointer;
 }
-
 .socials-bg:hover {
   border: 2px solid #1d1d1d25;
 }
@@ -263,7 +225,7 @@ header .nav ul {
   z-index: 5;
 }
 .sm-text-p {
-  font-size: 0.6rem;
+  font-size: 0.8rem;
   line-height: 1.5;
   margin-bottom: 20px;
   max-width: 60vw;
@@ -285,14 +247,12 @@ header .nav ul {
   opacity: 0.5;
   z-index: 1;
 }
-
 .text-in-box p {
   font-size: 9rem;
   font-weight: 500;
   color: #000000;
   font-family: "Montserrat", sans-serif;
 }
-
 .read-more {
   border-left: 1px solid #ffffff;
   border-right: 1px solid #ffffff;
@@ -305,7 +265,6 @@ header .nav ul {
 .read-more a:hover {
   color: #d3d3d3;
 }
-
 .main-section {
   padding: 40px 60px;
   display: flex;
@@ -322,12 +281,10 @@ header .nav ul {
   text-transform: uppercase;
   margin-bottom: 20px;
 }
-
 .about {
   max-width: 22rem;
   text-align: center;
 }
-
 /* DIVIDER */
 .divider {
   margin: 30px auto;
@@ -705,19 +662,18 @@ footer {
     flex-direction: column;
     row-gap: 20px;
     position: absolute;
-    top: 50%;
+    top: 0;
     width: 200vw;
     background-color: #000000bd;
-    height: 580px;
+    height: 0;
     z-index: 7;
     transition: all ease-in-out 0.2s;
-    opacity: 0;
+    opacity: 1;
   }
   nav ul li {
     width: 100%;
     text-align: center;
   }
-
   nav ul li a {
     display: flex;
     align-items: center;
@@ -725,8 +681,8 @@ footer {
     height: 40px;
     width: 100%;
     transition: all ease-in-out 0.3s;
+    display: none;
   }
-
   nav ul li a:hover {
     background-color: #ffffff;
     border-radius: unset;
@@ -741,25 +697,73 @@ footer {
   .contact-me:hover {
     color: #000000 !important;
   }
-  .open-menu {
-    opacity: 1;
+
+  /* HAMBURGER ICON SWITCH */
+  #close-menu-main {
+    height: 100%;
+    left: 0;
+    top: 50px;
+    width: 100%;
+    background-color: #000000;
+    z-index: 6;
     position: absolute;
-    z-index: 10;
-    right: 30px;
-    top: 25px;
-    transition: opacity ease 0.5s;
-  }
-  .open-menu:hover {
-    opacity: 0.3;
+    display: none;
+    opacity: 0.5;
   }
 
   .close-menu {
+    border: 0.15rem solid #ffffff;
+    display: block;
+    position: relative;
+    margin-top: -10px;
+    height: 35px;
+    width: 35px;
     opacity: 0;
     position: absolute;
     z-index: 10;
     right: 30px;
     top: 25px;
     transition: opacity ease 0.5s;
+    border-radius: 5px 5px 5px 5px;
+  }
+  .open-menu {
+    border: 0.15rem solid #ffffff;
+    display: block;
+    position: relative;
+    margin-top: -10px;
+    height: 35px;
+    width: 35px;
+    opacity: 1;
+    position: absolute;
+    z-index: 10;
+    right: 30px;
+    top: 25px;
+    transition: opacity ease 0.5s;
+    border-radius: 5px 5px 5px 5px;
+  }
+  .close-menu:hover {
+    background-color: #72727283;
+    border: none;
+    border-radius: 5px 5px 5px 5px;
+  }
+  .open-menu:hover {
+    background-color: #72727283;
+    border: none;
+    border-radius: 5px 5px 5px 5px;
+  }
+  .open-menu img {
+    position: relative;
+    top: 25%;
+    left: 24%;
+    width: 17px;
+    cursor: pointer;
+  }
+  .close-menu img {
+    position: relative;
+    top: 25%;
+    left: 24%;
+    width: 17px;
+    cursor: pointer;
   }
   .text-in-box {
     position: absolute;
@@ -836,21 +840,17 @@ footer {
     margin-top: 2px;
   }
 
-  .switch {
-    display: block;
-  }
-  .open-menu {
-    display: block;
-  }
-  .close-menu {
-    display: block;
-  }
   .all-coded-design-content h4 {
     width: 28vw;
   }
-  #switch:checked ~ header > nav > .container > ul {
+  #switch:checked ~ header > nav ul {
     top: 320px;
-    opacity: 0.9;
+    height: 580px;
+    /* opacity: 0.9; */
+  }
+
+  #switch:checked ~ header > nav ul li a {
+    display: block;
   }
   #switch:checked ~ label .open-menu {
     opacity: 0;
