--- a/css/style.css
+++ b/css/style.css
@@ -559,6 +559,8 @@ footer {
   height: 20vh;
   background-color: #1d1d1d;
   padding: 2vh;
+}
+footer p {
   text-align: center;
 }
 .footer-content {
