--- a/css/style.css
+++ b/css/style.css
@@ -883,6 +883,13 @@ footer p {
     top: 65%;
     left: 20%;
   }
+  .text-in-box {
+    position: absolute;
+    top: 0;
+    right: 10%;
+    height: 37vh;
+    width: 77vw;
+  }
   .name-designation {
     position: absolute;
     top: 90%;
